learning/whoami/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami
spec:
  ingressClassName: nginx
  #tls:
  #- hosts:
  #  - whoami.zircon.local
  #  secretName: whoami-cert-manager-tls
  rules:
  - host: whoami.zircon.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: whoami
            port:
              number: 80
